Prevent rubber banding on iOS

--- a/src/main.sass
+++ b/src/main.sass
@@ -13,6 +13,7 @@ body
   width: 100vw
   height: 100%
   overflow: hidden
+  position: fixed
   margin: 0
   padding: 0
 
